# hierotex

./: .gitignore  .travis.yml  Exclude  INSTALL.txt  LIZEZMOI  Licence  Makefile  Makefile.am  README.md  README_FIRST  TDS  configure.ac  manifest.txt  variable.mk
Seshnesu/: Makefile  Makefile.bak  flexaux.c  fonctions.c  hache.c  hache.h  mklex.awk  mkliste.awk  mynew.h  quadra.c  quadra.h  sesh  sesh.c  sesh.h  sesh.y  seshSource.h  seshl.c  seshl.l  y.output
install/: delete.sh  doinst.sh  predelete.sh
sesh/: ChangeLog  Makefile  Makefile.am  Version.c  fonctions.c  fonctions.h  general.h  hache.c  mynew.h  quadra.c  seshSource.txt  seshl.l
texmf/: Makefile.am
texmf/doc/latex/hierotex/: EGypto.htx  EGypto.tex  Makefile  Makefile.am  bib.bib  signlist.tex  testNewSigns.htx  titi.mf  titi_font.mf  toto.dvi  toto.htex  toto.mf  toto.ps  toto.tex  toto_font.mf
texmf/doc/latex/hierotex/auto/: EGypto.el  bib.el  toto.el
texmf/dvips/: config.ps
texmf/fonts/afm/hierotex/: Egyp.afm  HieroA.afm  HieroB.afm  HieroExt.afm  HieroH.afm  HieroI.afm  HieroP.afm  HieroQ.afm  HieroR.afm  HieroW.afm  HieroY.afm  diacr12.afm  diacrb10.afm
texmf/fonts/map/dvips/hierotex/: diacrFonts.map  hierofonts.map
texmf/fonts/pfm/public/hierotex/: HieroE.pfm
texmf/fonts/source/public/hierotex/auxmf/: Egyp.mf.old  Hibzrstp.mf  diacr10.mf  diacr12.mf  diacr8.mf  diacr9.mf  diacrb10.mf  diacrb12.mf  textdiacr.mf
texmf/fonts/source/public/hierotex/mf/: HieroFonteA.mf  HieroFonteA_font.mf  HieroFonteAa.mf  HieroFonteAa_font.mf  HieroFonteB.mf  HieroFonteB_font.mf  HieroFonteC.mf  HieroFonteD.mf  (+44 more)
texmf/fonts/tfm/hierotex/: HieroA.tfm  HieroAa.tfm  HieroB.tfm  HieroC.tfm  HieroE.tfm  HieroExt.tfm  HieroG.tfm  HieroH.tfm  HieroK.tfm  HieroM.tfm  HieroN.tfm  HieroS.tfm  HieroU.tfm  HieroV.tfm
texmf/fonts/tfm/hierotex/auxmf/: Egyp.tfm  diacr10.tfm
texmf/fonts/tfm/public/Hieroglyphs/: HieroD.tfm  HieroR.tfm  HieroW.tfm  HieroX.tfm  HieroY.tfm  HieroZ.tfm
texmf/fonts/type1/: HieroAa.afm  HieroC.afm  HieroD.afm  HieroE.afm  HieroE.pfa  HieroF.afm  HieroF.tfm  HieroG.afm  HieroH.pfa  HieroI.tfm  HieroL.afm  HieroL.tfm  HieroN.afm  HieroO.afm  HieroO.tfm  HieroP.pfa  HieroP.tfm  HieroQ.tfm  HieroT.tfm  HieroU.afm  HieroU.pfa  HieroV.pfa  HieroW.pfa  HieroY.pfa  HieroZ.afm  diacr.afm
texmf/fonts/type1/Hieroglyphs/: HieroAa.pfa  HieroExt.pfa  HieroF.afm  HieroF.pfa  HieroI.pfa  HieroK.afm  HieroL.pfa  HieroM.afm  HieroM.pfa  HieroN.afm  HieroN.pfa  HieroN.pfb  HieroQ.pfa  HieroR.pfa  HieroS.afm  HieroT.afm  HieroV.afm  HieroX.afm  diacr12.pfa  diacrb10.pfa
texmf/fonts/type1/public/hierotex/: Egyp.pfa  Fontmap  HieroA.pfa  HieroB.pfa  HieroC.pfa  HieroD.pfa  HieroF.pfa  HieroG.pfa  HieroK.pfa  HieroN.pfa  HieroO.pfa  HieroS.pfa  HieroT.pfa  HieroX.pfa  HieroZ.pfa  diacr.pfa
texmf/pdftex/config/: pdftex.cfg
texmf/tex/latex/hierotex/: DIACRdiacr.fd  EgypUtil.sty  OT1diacr.fd  T1diacr.fd  egypto.sty  hiero.sty  hiero.sty.orig
texmf/tex/latex/hierotex/auto/: hiero.el
texmf/web2c/: updmap.cfg
